# parisijax

./: .gitignore  CITATION.cff  README.md  pyproject.toml
examples/: demo.ipynb  demo_fixed.py  demo_gpu_pt.py  demo_large_system.py  demo_production.py
parisijax/: __init__.py
parisijax/analysis/: __init__.py  overlap.py  scaling.py
parisijax/core/: __init__.py  hamiltonian.py  mcmc.py  solver.py
parisijax/viz/: __init__.py  animation.py
tests/: test_sk.py
